tests/baselines/reference/InterfaceDeclaration8.errors.txt
tests/cases/compiler/InterfaceDeclaration8.ts(1,11): error TS2427: Interface name cannot be 'string'.


==== tests/cases/compiler/InterfaceDeclaration8.ts (1 errors) ====
    interface string {
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'.
    }